# mortgage_mage

./: .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  scratch.ipynb
.github/workflows/: ci.yaml
examples/: simulation.py  stochastic_simulation.py
mortgage_mage/: rate_scraper.py  rent_scraper.py  simulation.py
src/: rate_scraper.py  simulation.py
tests/: rate_scraper_test.py  simulation_test.py
