[tool.poetry]
name = "mortgage_mage"
version = "0.1.0"
description = "A financial modeler for mortgaged rental property"
authors = ["Jake Schmidt <schmidt.jake.c@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "^1.21.2"
numpy-financial = "^1.0.0"
pandas = "^1.3.3"
requests = "^2.26.0"
structlog = "^21.1.0"
xarray = "^0.19.0"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
colorama = "^0.4.4"
notebook = "^6.4.4"
seaborn = "^0.11.2"
pre-commit = "^2.15.0"
flake8 = "^3.9.2"
mypy = ">=0.931"
black = {extras = ["jupyter"], version = "^22.1.0"}
isort = "^5.9.3"
pyproject-flake8 = "^0.0.1-alpha.2"
types-requests = "^2.27.11"
bandit = "^1.7.4"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120

[tool.isort]
profile = "google"
py_version = "39"

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
implicit_reexport = true
show_error_codes = true
strict = true
exclude = ".venv"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.pytest]
addopts = ["-s"]
log_cli = true
