[tool.poetry]
name = "mortgage_mage"
version = "0.1.0"
description = "A financial modeler for mortgaged rental property"
authors = ["Jake Schmidt <schmidt.jake.c@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "^1.21.2"
numpy-financial = "^1.0.0"
pandas = "^1.3.3"
requests = "^2.26.0"
structlog = "^21.1.0"
xarray = "^0.19.0"
tenacity = "^8.0.1"
notebook = {version = "^6.4.12", extras = ["explore"]}
seaborn = {version = "^0.11.2", extras = ["explore"]}
pre-commit = {version =  "^2.15.0", extras = ["pre-commit"]}

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.1.0"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = ">=0.931"
pyproject-flake8 = "^0.0.1-alpha.2"
pytest = "^7.0.1"
types-requests = "^2.27.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120

[tool.isort]
profile = "google"
py_version = "39"

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
implicit_reexport = true
show_error_codes = true
strict = true
exclude = ".venv"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.pytest]
addopts = ["-s"]
log_cli = true
