[project]
name = "mammography"
dynamic = ["version"]
dependencies = [
    "numpy",
    "numpy-financial",
    "pandas",
    "requests",
]

[project.optional-dependencies]
dev = [
    "bandit[toml]",
    "build",
    "black",
    "flake8",
    "isort",
    "mypy",
    "pre-commit",
    "pyproject-flake8",
    "pytest",
    "typeguard",
    "types-requests",
]

[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.bandit]
exclude = "tests"

[tool.flake8]
max-line-length = 120
max-complexity = 10

[tool.isort]
profile = "black"
py_version = "310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
implicit_reexport = true
show_error_codes = true
strict = false
exclude = "venv"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
addopts = ["-s", "--typeguard-packages=mortgage_mage,tests"]
log_cli = true
log_cli_level = "INFO"

[tool.setuptools_scm]

[tool.setuptools]
packages = ["mortgage_mage"]
